Vizualizer supported query parameters

--- a/room.monks.cloud/src/static/index.html
+++ b/room.monks.cloud/src/static/index.html
@@ -8,19 +8,14 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="visualizer">
+  <meta name="apple-mobile-web-app-title" content="vizualizer">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
-  <title>visualizer</title>
+  <title>vizualizer</title>
   <link rel="manifest" href="manifest.json">
-  <style>
-    html, body {
-      backgroud-color: #000;
-    }
-  </style>
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
@@ -29,11 +24,11 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=985127232');
       });
     }
   </script>
-  <script src="assets/js/microphone.js"></script>
-  <script src="assets/js/main.dart.js"></script>
+  <script src="microphone.js" type="application/javascript"></script>
+  <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
