--- a/cbx.cz/src/html/index.html
+++ b/cbx.cz/src/html/index.html
@@ -41,12 +41,25 @@
     </svg>
     </h1>
     <p>Zadejte prosím kód z poznámky k zásilce:</p>
-      <div class="form-text-input-component">
-        <input name="deliveryCode" type="text" />
-      </div>
-    <button class="button-component">Otevřít zásilku</button>
+      <form class="form-block">
+        <div class="form-text-input-component">
+          <input name="deliveryCode" type="text" maxlength="6" placeholder="XXXXXX" pattern="[0-9A-Za-z]{6}" inputmode="numeric" title="6ti místné číslo zásilky"/>
+        </div>
+        <button class="button-component">Otevřít zásilku</button>
+      </form>
     </div>
   </div>
+<script>
+
+  const form = document.querySelector(".form-block");
+  form.addEventListener("submit", function(e) {
+    e.stopImmediatePropagation();
+    e.preventDefault();
+    const input = document.querySelector("input[name=deliveryCode]");
+    window.location.replace(`https://chytrybox.monks.cloud/delivery/${input.value.toUpperCase()}`);
+  });
+</script>
+
 </body>
 
 </html>
