[cbx.cz] update redirect url

--- a/cbx.cz/src/html/index.html
+++ b/cbx.cz/src/html/index.html
@@ -55,7 +55,7 @@
       e.stopImmediatePropagation();
       e.preventDefault();
       const input = document.querySelector("input[name=deliveryCode]");
-      window.location.replace(`https://chytrybox.monks.cloud/delivery/${input.value.toUpperCase()}`);
+      window.location.replace(`https://chytrybox.development.monks.cloud/delivery/${input.value.toUpperCase()}`);
     });
   </script>
 
