--- a/cbx.cz/src/html/index.html
+++ b/cbx.cz/src/html/index.html
@@ -15,6 +15,7 @@
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="preload" href="https://use.typekit.net/uut0ebh.css" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="https://use.typekit.net/uut0ebh.css" />
   <link rel="stylesheet" href="/assets/css/main.css">
 </head>
