[cbx.cz] preload link fixes

--- a/cbx.cz/src/html/index.html
+++ b/cbx.cz/src/html/index.html
@@ -15,7 +15,9 @@
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="preload" href="https://use.typekit.net/uut0ebh.css" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="https://use.typekit.net/af/98e3f6/000000000000000077359562/30/l?primer=9534f20d24153432f138f14be19fe00ed05018076afc824dd1a6f6ca76bae7c7&fvd=n7&v=3" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="https://use.typekit.net/af/e4b1a9/000000000000000077359571/30/l?primer=9534f20d24153432f138f14be19fe00ed05018076afc824dd1a6f6ca76bae7c7&fvd=n6&v=3" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="https://use.typekit.net/af/d45b9a/000000000000000077359577/30/l?primer=9534f20d24153432f138f14be19fe00ed05018076afc824dd1a6f6ca76bae7c7&fvd=n4&v=3" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="https://use.typekit.net/uut0ebh.css" />
   <link rel="stylesheet" href="/assets/css/main.css">
 </head>
