Chytrý box background

--- a/chytrybox.cz/src/html/index.html
+++ b/chytrybox.cz/src/html/index.html
@@ -132,7 +132,7 @@
       <h1>Nečekejte na kurýra</h1>
       <p>Nechte si zásilku doručit do boxu, kde si ji vyzvednete, kdy chcete. Už
         žádné “doručíme mezi 8&nbsp;a&nbsp;18”.</p>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <a href="" class="action-button">Objednat box</a>
       </div>
     </div>
