--- a/chytrybox.cz/src/html/index.html
+++ b/chytrybox.cz/src/html/index.html
@@ -293,7 +293,7 @@
 
   </div>
 </section>
-<section id="" class="how-it-works mdc-layout-grid">
+<section id="how-it-works" class="how-it-works mdc-layout-grid">
   <div class="mdc-layout-grid__inner layout-wrapper">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h2>Jak Chytrý box funguje?</h2>
