Term od Policy and Conditions - Chytrý box

--- a/chytrybox.cz/src/html/index.html
+++ b/chytrybox.cz/src/html/index.html
@@ -530,8 +530,12 @@
 <footer>
   <div class="mdc-layout-grid layout-wrapper">
     <div class="mdc-layout-grid__inner">
-      <div class="footer__content mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="footer__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         Privacy Policy | Terms & Conditions
+      </div>
+      <div class="footer__list mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <li><a href="/PPS">Podmínky používání služby</a></li>
+        <li><a href="/ToS">Ochrana osobních údajů</a></li>
       </div>
     </div>
   </div>
