--- a/chytrybox.cz/src/html/index.html
+++ b/chytrybox.cz/src/html/index.html
@@ -159,7 +159,7 @@
       <p>Nechte si zásilku doručit do boxu, kde si ji vyzvednete, kdy chcete. Už
         žádné “doručíme mezi 8&nbsp;a&nbsp;18”.</p>
       <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a href="" class="action-button">Objednat box</a>
+        <a class="action-button">Objednat box</a>
       </div>
     </div>
     <div class="delivery-boy_bg mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
@@ -667,7 +667,7 @@
         i&nbsp;otevřete.</p>
     </div>
     <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-      <a href="" class="action-button">Objednat box</a>
+      <a class="action-button">Objednat box</a>
     </div>
 
   </div>
