Meta data a linky - Chytrybox. cz

--- a/chytrybox.cz/src/html/index.html
+++ b/chytrybox.cz/src/html/index.html
@@ -8,6 +8,9 @@
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width,Save-Data">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
   <meta name="description" content="Created with simple generator">
+  <meta name="theme-color" content="#00A1E5">
+  <link rel="apple-touch-icon" href="/assets/img/chytrybox_logo.svg">
+
 
   <!-- Google Font - Nunito Sans -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -159,7 +162,7 @@
       <p>Nechte si zásilku doručit do boxu, kde si ji vyzvednete, kdy chcete. Už
         žádné “doručíme mezi 8&nbsp;a&nbsp;18”.</p>
       <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a class="action-button">Objednat box</a>
+        <a href="#contact" class="action-button">Objednat box</a>
       </div>
     </div>
     <div class="delivery-boy_bg mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
@@ -667,7 +670,7 @@
         i&nbsp;otevřete.</p>
     </div>
     <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-      <a class="action-button">Objednat box</a>
+      <a href="#contact" class="action-button">Objednat box</a>
     </div>
 
   </div>
@@ -741,8 +744,8 @@
       </div>
       <div class="footer__list mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <ul>
-          <li><a href="/PPS">Podmínky používání služby</a></li>
-          <li><a href="/ToS">Ochrana osobních údajů</a></li>
+          <li><a href="./PPS">Podmínky používání služby</a></li>
+          <li><a href="./ToS">Ochrana osobních údajů</a></li>
         </ul>
       </div>
     </div>
