Úprava odkazování na stránky - Chytry box

--- a/chytrybox.cz/src/html/index.html
+++ b/chytrybox.cz/src/html/index.html
@@ -744,8 +744,8 @@
       </div>
       <div class="footer__list mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <ul>
-          <li><a href="./PPS">Podmínky používání služby</a></li>
-          <li><a href="./ToS">Ochrana osobních údajů</a></li>
+          <li><a href="/PPS">Podmínky používání služby</a></li>
+          <li><a href="/ToS">Ochrana osobních údajů</a></li>
         </ul>
       </div>
     </div>
