[room.monks.cloud] New HP with embedde video player and vizualizer

--- a/room.monks.cloud/src/html/index.html
+++ b/room.monks.cloud/src/html/index.html
@@ -3,18 +3,24 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>TopMonks</title>
+  <title>Monksroom eXperience</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <link rel="stylesheet" href="/stylesheets/main.css">
+  <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 
 <body>
-  <div style="display: flex; justify-content: center; align-items: center;flex-direction: column;height: 90vh;">
-    <h1>TopMonks</h1>
-    <h2>Created with simple generator</h2>
-  </div>
+<header>
+  <h1>Monksroom eXperience</h1>
+</header>
+<section id="video">
+  <iframe src="https://embed.restream.io/player/index.html?token=09179ee482b3ba52d51058c57d7d07cb" width="480"
+          height="360" frameborder="0" allowfullscreen></iframe>
+  <p>Powered by <a href="https://restream.io">Restream.io</a></p>
+</section>
+<section id="vizualizer">
+  <iframe src="/vizualizer/" width="480" height="360" frameborder="0" allowfullscreen></iframe>
+</section>
 </body>
-
 </html>
