--- a/room.monks.cloud/src/html/vizualizer/index.html
+++ b/room.monks.cloud/src/html/vizualizer/index.html
@@ -3,19 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
 
-  <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="vizualizer">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="/icons/Icon-192.png">
 
-  <!-- Favicon -->
-  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+  <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 
-  <title>vizualizer</title>
-  <link rel="manifest" href="manifest.json">
+  <title>Monksroom Vizualizer</title>
+  <link rel="manifest" href="/manifest.json">
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
@@ -28,7 +25,7 @@
       });
     }
   </script>
-  <script src="microphone.js" type="application/javascript"></script>
-  <script src="main.dart.js" type="application/javascript"></script>
+  <script src="/microphone.js" type="application/javascript"></script>
+  <script src="/main.dart.js" type="application/javascript"></script>
 </body>
 </html>
