--- a/chytrybox.cz/src/html/index.html
+++ b/chytrybox.cz/src/html/index.html
@@ -2,6 +2,14 @@
 <html lang="cs">
 
 <head>
+    
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MRW5QJ6');</script>
+<!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <title>Chytrý Box</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -10,8 +18,6 @@
   <meta name="description" content="Created with simple generator">
   <meta name="theme-color" content="#00A1E5">
   <link rel="apple-touch-icon" href="/assets/img/chytrybox_logo.svg">
-
-
   <!-- Google Font - Nunito Sans -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -32,6 +38,10 @@
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MRW5QJ6"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <header class="app-bar">
   <div class="mdc-layout-grid layout-wrapper">
     <div class="mdc-layout-grid__inner">
