--- a/chytrybox.cz/src/html/index.html
+++ b/chytrybox.cz/src/html/index.html
@@ -2,7 +2,8 @@
 <html lang="cs">
 
 <head>
-    
+  <!-- Seznam check code -->
+    <meta name="seznam-wmt" content="hdwVQ7wyhF87D1Fh7pSYsPNeYLUDwIlL" />
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
