--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Hacker Camp</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width,Save-Data">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
@@ -12,25 +13,141 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata&amp;family=Syne+Mono&amp;display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
   <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-5F59KHT');</script>
+  <script>(function (w, d, s, l, i) {
+    w[l] = w[l] || [];
+    w[l].push({
+      'gtm.start':
+        new Date().getTime(), event: 'gtm.js'
+    });
+    var f = d.getElementsByTagName(s)[0],
+      j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+    j.async = true;
+    j.src =
+      'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+    f.parentNode.insertBefore(j, f);
+  })(window, document, 'script', 'dataLayer', 'GTM-5F59KHT');</script>
   <!-- End Google Tag Manager -->
 </head>
 
 <body>
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5F59KHT"
-                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<noscript>
+  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5F59KHT"
+          height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
 <!-- End Google Tag Manager (noscript) -->
-  <div style="display: flex; justify-content: center; align-items: center;flex-direction: column;height: 90vh;">
-    <h1>Hacker Camp</h1>
-    <h2>Created with simple generator</h2>
+<header>
+  <h1>Hacker Camp</h1>
+</header>
+<section>
+  <ul>
+    <li>4 dny na konci léta</li>
+    <li>Neformální atmosféra campu nebo festivalu v&nbsp;přírodě&nbsp;&ndash; potkáme se fyzicky</li>
+    <li>Maximálně tři stovky lidí z&nbsp;české tech scény s&nbsp;kusem hackera v&nbsp;srdci</li>
+    <li>Každý z&nbsp;účastníků je zároveň aktivním tvůrcem programu</li>
+    <li>Co čekat: technologie, hackathony, workshopy, sport i&nbsp;relax a večerní&nbsp;zábava</li>
+  </ul>
+</section>
+<section>
+  <p>Zažijte nultý ročník netradičního čtyřdenního festivalu pro lidi
+    z&nbsp;české tech scény. V&nbsp;duchu nekonference či barcampu se od sebe budeme
+    vzájemně učit, bavit se a poznávat. Večer se vám postaráme
+    o&nbsp;festivalový program&nbsp;&ndash; s&nbsp;kapelami, dobrým pivem a vším, co
+    k&nbsp;festivalům patří. Jaké si to uděláme, takové to&nbsp;bude.</p>
+
+  <p>Potkejte se s&nbsp;lidmi, kteří jsou podobně naladěni, a dejte vzniknout
+    novým&nbsp;věcem.</p>
+</section>
+<section>
+  <h2 id="toc-koho-potkas">Koho potkáš?</h2>
+
+  <p>Lidi z&nbsp;české tech scény a spřátelených neziskovek. Maximálně nás
+    letos budou tři stovky. Hacker Camp je jen pro zvané. Jakoukoliv akci tvoří
+    totiž hlavně lidi, a tuhle akci chceme strávit s&nbsp;kamarády a těmi, které
+    za kamarády chceme. Zajistíme si tak, že zveme jenom lidi, se kterými sami
+    chceme strávit 4&nbsp;společné dny. Blízko máme k&nbsp;těm, Vybíráme ty, co
+    kteří mají v&nbsp;srdci kus hackerapunk a hacker kulturu v&nbsp;krvi. Chtějí
+    zažít a sami postavit něco nového. Mají rádi a rádi se podílejí
+    například i&nbsp;na neziskových projektech. A&nbsp;hlavně se chtějí konečně
+    potkat fyzicky a něco nového se od sebe vzájemně naučit. Každý
+    účastník je zároveň tvůrcem programu. Proto zveme hlavně ty, kdo se
+    chtějí do programu společných čtyř dní zapojit.</p>
+
+  <p>Můžete přijet jako jednotlivec, nebo ideálně vyrazit s&nbsp;celým svým
+    týmem a čtyři dny v&nbsp;přírodě si užít i&nbsp;jako netradiční teambuilding.
+    Máme už první předběžné zájemce o&nbsp;účast. Potkáte se například
+    s&nbsp;klukama a holkama z&nbsp;Apify, TopMonks, Czechitas, Hlídač Státu, Fenek,
+    Keboola, ReactGirls, Mavericks, … a seznam pořád&nbsp;roste.</p>
+
+  <div class="hc-cta">
+    <a href="#" class="hc-btn">Přijeďte taky</a>
   </div>
+</section>
+
+<section>
+  <h2 id="toc-kdy-prijet">Kdy přijet?</h2>
+
+  <p>Poslední týden v&nbsp;srpnu: Začínáme ve čtvrtek 2.&nbsp;září a končíme
+    v&nbsp;neděli 5.&nbsp;září v&nbsp;poledne, hned jak se proberete po good-bye&nbsp;party.</p>
+
+  <h2 id="toc-kde-budeme">Kde budeme?</h2>
+
+  <p>Rekreační středisko Sobeňák</p>
+
+  <h2 id="toc-co-to-bude-stat">Co to bude stát?</h2>
+
+  <p>Finální cenovka bude záležet na místě, kde budeme. Na akci neplánujeme
+    vydělávat, zároveň ji chceme tvořit bez velkých komerčních sponzorů.
+    Cena tedy půjde na pokrytí nákladů. Počítáme zhruba s&nbsp;5&nbsp;&ndash; 10&nbsp;tisíci
+    na každého z&nbsp;nás.</p>
+
+  <p>Jako firma můžete podpořit účast nějaké neziskovky, nebo studenta.
+    Dejte nám vědět, zda o&nbsp;něco takového máte zájem. Rádi vás
+    propojíme!</p>
+
+  <h2>Chceš přijet?</h2>
+  <div class="hc-cta"><a href="#" class="hc-btn">Dej nám o&nbsp;sobě vědět!</a></div>
+
+  <h2 id="toc-co-od-hacker-campu-cekat">Co od Hacker Campu čekat?</h2>
+
+  <p>Děláme nekomerční a z&nbsp;principu neformální akci, kde nám má všem
+    být dobře. Tohle jsou základní geny Hacker campu. Jediná část, kde
+    nestrpíme kompromisy:</p>
+
+  <ul>
+    <li>Akce je jen pro pozvané</li>
+
+    <li>Tykáme si</li>
+
+    <li>Vstupenku si kupuješ na celou akci a budeme rádi, když s&nbsp;námi
+      zůstaneš všechny tři (čtyři? :))&nbsp;dny</li>
+
+    <li>Chováme se k&nbsp;sobě slušně a ohleduplně&nbsp;&ndash; dodržujeme hygienická
+      i&nbsp;etická pravidla (i&nbsp;pokud jde o&nbsp;focení se, noční klid a podobně)</li>
+
+    <li>Jsme v&nbsp;přírodě a chováme se i&nbsp;k&nbsp;ní ohleduplně (třídíme odpad a
+      ideálně odjíždíme beze&nbsp;stop)</li>
+
+    <li>Nemáme žádné VIP zóny</li>
+
+    <li>Každý účastník je zároveň tvůrce akce. Od každého čekáme
+      aktivní zapojení podle vlastních možností. Můžeš přispět
+      přednáškou, workshopem, v&nbsp;panelovce, zorganizovat ranní výběh nebo turnaj
+      ve fotbálku. Přivést můžeš i&nbsp;jakýkoliv doprovodný program&nbsp;&ndash;
+      uvítáme vše od pípy, baristy a přípravy kávy až po&nbsp;DJs.</li>
+
+    <li>Hacker Camp je z&nbsp;principu nekomerční akce. Svoji vlastní službu nebo
+      produkt můžeš propagovat a nabízet jen pokud to obohatí samotnou&nbsp;akci</li>
+  </ul>
+</section>
+
+
+<footer>
+  <p>© 2021 Jakub Balada & spol.</p>
+</footer>
 </body>
 
 </html>
