[www.hackercamp.cz] Spaces

--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -48,7 +48,7 @@
   <ul>
     <li>4 dny na konci léta</li>
     <li>Neformální atmosféra campu nebo festivalu v&nbsp;přírodě&nbsp;&ndash; potkáme se fyzicky</li>
-    <li>Maximálně <data property="maximumAttendeeCapacity" value="300">tři stovky</data> lidí
+    <li>Maximálně&nbsp;<data property="maximumAttendeeCapacity" value="300">tři stovky</data>&nbsp;lidí
       z&nbsp;české tech scény s&nbsp;kusem hackera v&nbsp;srdci</li>
     <li>Každý z&nbsp;účastníků je zároveň aktivním tvůrcem programu</li>
     <li>Co čekat: technologie, hackathony, workshopy, sport i&nbsp;relax a večerní&nbsp;zábava</li>
