[www.topmonks.com] Added schema.org Organization metadata

--- a/shared/src/common/footer.html
+++ b/shared/src/common/footer.html
@@ -51,14 +51,10 @@
             We are your software development partners, experienced with both
             startup and corporate environment.
           </p>
-          <div
-            itemprop="subOrganization"
-            itemscope=""
-            itemtype="https://schema.org/Organization"
-          >
-            <span itemprop="legalName">TopMonks s.r.o.</span>
+          <div>
+            <span property="legalName">TopMonks s.r.o.</span>
             <div>
-              <a href="mailto:info@topmonks.com" itemprop="email"
+              <a href="mailto:info@topmonks.com" property="email"
                 >info@topmonks.com</a
               >
             </div>
@@ -73,7 +69,7 @@
         <div
           class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop"
         >
-          <p>&copy; 2020 TopMonks s.r.o.</p>
+          <p>&copy; 2021 TopMonks s.r.o.</p>
         </div>
         <div
           class="footer_social-buttons mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop"
@@ -83,7 +79,6 @@
               href="https://www.linkedin.com/company/topmonks/"
               title="TopMonks on LinkedIn"
               rel="me"
-              itemprop="sameAs"
               class="linkedin"
             >
               <svg
@@ -123,7 +118,6 @@
               href="https://github.com/topmonks"
               title="TopMonks on GitHub"
               rel="me"
-              itemprop="sameAs"
               class="github"
             >
               <svg
@@ -163,7 +157,6 @@
               href="https://www.youtube.com/c/TopMonksCZ"
               title="TopMonks on Youtube"
               rel="me"
-              itemprop="sameAs"
               class="youtube"
             >
               <svg
@@ -218,7 +211,6 @@
               href="https://twitter.com/topmonks"
               title="TopMonks on Twitter"
               rel="me"
-              itemprop="sameAs"
               class="twitter"
             >
               <svg
@@ -262,7 +254,6 @@
               href="https://www.facebook.com/topmonks"
               title="TopMonks on Facebook"
               rel="me"
-              itemprop="sameAs"
               class="facebook"
             >
               <svg
@@ -306,7 +297,6 @@
               href="https://dribbble.com/TopMonks"
               title="TopMonks on Dribbble"
               rel="me"
-              itemprop="sameAs"
               class="dribbble"
             >
               <svg
@@ -321,7 +311,7 @@
               >
                 <g id="Layer_1_1_">
                   <circle cx="256" cy="256" fill="#E94E8A" r="238.2" />
-                  <title>[Logo icon] Dribbble</title>
+                  <title>Dribbble</title>
                 </g>
                 <g>
                   <circle
