--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -85,9 +85,11 @@
     s&nbsp;klukama a holkama z&nbsp;Apify, TopMonks, Czechitas, Hlídač Státu, Fenek,
     Keboola, ReactGirls, Mavericks, … a seznam pořád&nbsp;roste.</p>
 
+  <!--
   <div class="hc-cta">
     <a href="#" class="hc-btn">Přijeďte taky</a>
   </div>
+  -->
 </section>
 
 <section>
@@ -103,8 +105,8 @@
   <h2 id="toc-kde-budeme">Kde budeme?</h2>
 
   <div property="location" typeof="Place">
-    <h3 property="name"><a property="url" href="https://www.sobenak.cz/">Rekreační středisko
-    Sobeňák</a></h3>
+    <h3 property="name"><a property="url" href="https://www.sobenak.cz/">Sobeňák - krásný areál
+     v srdci Brd</a></h3>
     <div property="address" typeof="PostalAddress">
       <span property="streetAddress">Starý Rožmitál 148</span><br>
       <span property="postalCode">262 42</span> <span property="addressLocality">Rožmitál pod Třemšínem</span>
@@ -121,9 +123,6 @@
   <p>Jako firma můžete podpořit účast nějaké neziskovky, nebo studenta.
     Dejte nám vědět, zda o&nbsp;něco takového máte zájem. Rádi vás
     propojíme!</p>
-
-  <h2>Chceš přijet?</h2>
-  <div class="hc-cta"><a href="#" class="hc-btn">Dej nám o&nbsp;sobě vědět!</a></div>
 
   <h2 id="toc-co-od-hacker-campu-cekat">Co od Hacker Campu čekat?</h2>
 
@@ -161,11 +160,24 @@
       produkt můžeš propagovat a nabízet jen pokud to obohatí samotnou&nbsp;akci
     </li>
   </ul>
+  
+  <h2 id="toc-kdo-jsme">Kdo jsme</h2>
+
+  <p>Nápad na Hacker Camp vznikl v hlavě Kuby Balady. 
+    Náš core organizační tým je složený z Páji (Czechitas), Kačky, Káji (Apify), Irči, Jirky (Fenek), 
+    Jirky, Aleše (TopMonks) a Pavla (Elephant Orchestra).</p>
+  <p>Všichni jsme součástí české tech scény. Znáte nás ze startupů, neziskovek i akcí, 
+    kde jsme se už určitě potkali. Všem nám chybí fyzické akce a eventy a věříme, že 
+    právě v netradičních set-upech a prostředích vznikají ty nejlepší nečekané nápady. 
+    Už teď se na nultý ročník Hacker Campu i tebe a tvůj tým těšíme!</p>
+  
+  <h2>Chceš přijet?</h2>
+  <p>Kontaktuj někoho z core týmu. Ideálně rovnou s nápadem, jak bys Hacker camp obohatil. Těšíme se!</p>
+  
 </section>
 
-
 <footer>
-  <p>© 2021 Jakub Balada & spol.</p>
+  <p>© 2021 Hacker camp</p>
 </footer>
 </body>
 
