--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -53,7 +53,7 @@
     <li>Maximálně&nbsp;<data property="maximumAttendeeCapacity" value="300">tři stovky</data>&nbsp;lidí
       z&nbsp;české tech scény s&nbsp;kusem hackera v&nbsp;srdci</li>
     <li>Každý z&nbsp;účastníků je zároveň aktivním tvůrcem programu</li>
-    <li>Co čekat: technologie, hackathony, workshopy, sport i&nbsp;relax a večerní&nbsp;zábava</li>
+    <li>Co čekat: technologie, workshopy, panelovky, sport i&nbsp;relax a večerní&nbsp;zábava</li>
   </ul>
 </section>
 <section>
@@ -82,8 +82,8 @@
   <p>Můžete přijet jako jednotlivec, nebo ideálně vyrazit s&nbsp;celým svým
     týmem a čtyři dny v&nbsp;přírodě si užít i&nbsp;jako netradiční teambuilding.
     Máme už první předběžné zájemce o&nbsp;účast. Potkáte se například
-    s&nbsp;klukama a holkama z&nbsp;Apify, TopMonks, Czechitas, Hlídač Státu, Fenek,
-    Keboola, ReactGirls, Mavericks, … a seznam pořád&nbsp;roste.</p>
+    s&nbsp;klukama a holkama z&nbsp;Apify, TopMonks, Czechitas, Hlídač Státu, Fenek, 
+    Mavericks, … a seznam pořád&nbsp;roste.</p>
 
   <!--
   <div class="hc-cta">
@@ -115,7 +115,7 @@
 
   <h2 id="toc-co-to-bude-stat">Co to bude stát?</h2>
 
-  <p>Finální cenovka bude záležet na místě, kde budeme. Na akci neplánujeme
+  <p>Finální cenovka bude záležet na nákladech. Na akci neplánujeme
     vydělávat, zároveň ji chceme tvořit bez velkých komerčních sponzorů.
     Cena tedy půjde na pokrytí nákladů. Počítáme zhruba s&nbsp;5&nbsp;&ndash; 10&nbsp;tisíci
     na každého z&nbsp;nás.</p>
@@ -163,7 +163,7 @@
   
   <h2 id="toc-kdo-jsme">Kdo jsme</h2>
 
-  <p>Nápad na Hacker Camp vznikl v hlavě Kuby Balady. 
+  <p>Nápad na Hacker Camp vznikl v hlavě Kuby Balady (Apify). 
     Náš core organizační tým je složený z Páji (Czechitas), Kačky, Káji (Apify), Irči, Jirky (Fenek), 
     Jirky, Aleše (TopMonks) a Pavla (Elephant Orchestra).</p>
   <p>Všichni jsme součástí české tech scény. Znáte nás ze startupů, neziskovek i akcí, 
