--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -83,7 +83,7 @@
     týmem a čtyři dny v&nbsp;přírodě si užít i&nbsp;jako netradiční teambuilding.
     Máme už první předběžné zájemce o&nbsp;účast. Potkáte se například
     s&nbsp;klukama a holkama z&nbsp;Apify, TopMonks, Czechitas, Hlídač Státu, Fenek, 
-    Mavericks, … a seznam pořád&nbsp;roste.</p>
+    Mavericks, Geneea, … a seznam pořád&nbsp;roste.</p>
 
   <!--
   <div class="hc-cta">
@@ -172,7 +172,7 @@
     Už teď se na nultý ročník Hacker Campu i tebe a tvůj tým těšíme!</p>
   
   <h2>Chceš přijet?</h2>
-  <p>Kontaktuj někoho z core týmu. Ideálně rovnou s nápadem, jak bys Hacker camp obohatil. Těšíme se!</p>
+  <p>Kontaktuj někoho z core týmu. Ideálně rovnou s nápadem, jak bys Hacker Camp obohatil(a). Těšíme se!</p>
   
 </section>
 
