[www.hackercamp.cz] Iteration on typography

--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -13,7 +13,7 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-  <link href="https://fonts.googleapis.com/css2?family=Inconsolata&amp;family=Syne+Mono&amp;display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Mukta+Mahee&amp;family=PT+Mono&amp;display=swap"
         rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="canonical" href="https://www.hackercamp.cz/">
@@ -45,6 +45,7 @@
 <!-- End Google Tag Manager (noscript) -->
 <header>
   <h1 property="name">Hacker Camp</h1>
+  <small>Hack to the Future</small>
 </header>
 <section>
   <ul>
@@ -82,8 +83,8 @@
   <p>Můžete přijet jako jednotlivec, nebo ideálně vyrazit s&nbsp;celým svým
     týmem a čtyři dny v&nbsp;přírodě si užít i&nbsp;jako netradiční teambuilding.
     Máme už první předběžné zájemce o&nbsp;účast. Potkáte se například
-    s&nbsp;klukama a holkama z&nbsp;Apify, TopMonks, Czechitas, Hlídač Státu, Fenek, 
-    Mavericks, Geneea, … a seznam pořád&nbsp;roste.</p>
+    s&nbsp;klukama a holkama z&nbsp;Apify, TopMonks, Czechitas, Hlídač Státu, Fenek,
+    Mavericks, Geneea, …a seznam pořád&nbsp;roste.</p>
 
   <!--
   <div class="hc-cta">
@@ -104,8 +105,8 @@
 
   <h2 id="toc-kde-budeme">Kde budeme?</h2>
 
-  <div property="location" typeof="Place">
-    <h3 property="name"><a property="url" href="https://www.sobenak.cz/">Sobeňák - krásný areál
+  <div property="location" typeof="Campground">
+    <h3><a property="url" href="https://www.sobenak.cz/"><span property="name">Sobeňák</span> - krásný areál
      v srdci Brd</a></h3>
     <div property="address" typeof="PostalAddress">
       <span property="streetAddress">Starý Rožmitál 148</span><br>
@@ -160,20 +161,20 @@
       produkt můžeš propagovat a nabízet jen pokud to obohatí samotnou&nbsp;akci
     </li>
   </ul>
-  
+
   <h2 id="toc-kdo-jsme">Kdo jsme</h2>
 
-  <p>Nápad na Hacker Camp vznikl v hlavě Kuby Balady (Apify). 
-    Náš core organizační tým je složený z Páji (Czechitas), Kačky, Káji (Apify), Irči, Jirky (Fenek), 
+  <p>Nápad na Hacker Camp vznikl v hlavě Kuby Balady (Apify).
+    Náš core organizační tým je složený z Páji (Czechitas), Kačky, Káji (Apify), Irči, Jirky (Fenek),
     Jirky, Aleše (TopMonks) a Pavla (Elephant Orchestra).</p>
-  <p>Všichni jsme součástí české tech scény. Znáte nás ze startupů, neziskovek i akcí, 
-    kde jsme se už určitě potkali. Všem nám chybí fyzické akce a eventy a věříme, že 
-    právě v netradičních set-upech a prostředích vznikají ty nejlepší nečekané nápady. 
+  <p>Všichni jsme součástí české tech scény. Znáte nás ze startupů, neziskovek i akcí,
+    kde jsme se už určitě potkali. Všem nám chybí fyzické akce a eventy a věříme, že
+    právě v netradičních set-upech a prostředích vznikají ty nejlepší nečekané nápady.
     Už teď se na nultý ročník Hacker Campu i tebe a tvůj tým těšíme!</p>
-  
+
   <h2>Chceš přijet?</h2>
   <p>Kontaktuj někoho z core týmu. Ideálně rovnou s nápadem, jak bys Hacker Camp obohatil(a). Těšíme se!</p>
-  
+
 </section>
 
 <footer>
