Minor text changes

--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -75,7 +75,7 @@
     </header>
     <section>
       <ul>
-        <li><strong>4 dny na konci léta</strong></li>
+        <li><strong>Tři dny na konci léta</strong></li>
         <li>
           <strong
             >Neformální atmosféra campu nebo festivalu v&nbsp;přírodě</strong
@@ -133,9 +133,8 @@
       </p>
 
       <p>
-        Můžete přijet jako jednotlivec, nebo ideálně vyrazit s&nbsp;celým svým
-        týmem a čtyři dny v&nbsp;přírodě si užít i&nbsp;jako
-        <strong>netradiční teambuilding</strong>. Máme už první předběžné
+        Můžete přijet jako jednotlivec, nebo vyrazit s&nbsp;celým svým
+        týmem a tři dny v&nbsp;přírodě si užít společně. Máme už první předběžné
         zájemce o&nbsp;účast. Potkáte se například s&nbsp;klukama a holkama
         z&nbsp;<span property="organizer" typeof="Organization"
           ><a property="sameAs" href="https://apify.com/">Apify</a></span
@@ -236,7 +235,7 @@
 
         <li>
           Vstupenku si kupuješ na celou akci a budeme rádi, když s&nbsp;námi
-          zůstaneš všechny tři (čtyři? :))&nbsp;dny
+          zůstaneš všechny tři dny
         </li>
 
         <li>
