More minor text updates

--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -12,7 +12,7 @@
     />
     <meta
       name="description"
-      content="Zažijte nultý ročník netradičního čtyřdenního festivalu pro lidi z české tech scény. V duchu nekonference či barcampu se od sebe budeme vzájemně učit, bavit se a poznávat."
+      content="Zažijte nultý ročník netradičního třídenního festivalu pro lidi z české tech scény. V duchu nekonference či barcampu se od sebe budeme vzájemně učit, bavit se a poznávat."
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Mukta+Mahee&amp;family=PT+Mono&amp;display=swap"
@@ -102,7 +102,7 @@
     </section>
     <section>
       <p property="description">
-        Zažijte nultý ročník netradičního čtyřdenního festivalu pro lidi
+        Zažijte nultý ročník netradičního třídenního festivalu pro lidi
         z&nbsp;české tech scény. V&nbsp;duchu nekonference či barcampu se od
         sebe budeme vzájemně učit, bavit se a poznávat. Večer se vám postaráme
         o&nbsp;festivalový program&nbsp;&ndash; s&nbsp;kapelami, dobrým pivem a
@@ -129,7 +129,7 @@
         chtějí konečně potkat fyzicky a něco nového se od sebe
         <strong>vzájemně naučit</strong>. Každý účastník je zároveň tvůrcem
         programu. Proto zveme hlavně ty, kdo se chtějí do programu společných
-        čtyř dní zapojit.
+        tří dní zapojit.
       </p>
 
       <p>
