--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -21,17 +21,17 @@
     <link rel="stylesheet" href="/assets/css/main.css" />
     <link rel="canonical" href="https://www.hackercamp.cz/" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/sitemanifest.json">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#e052a4">
-    <meta name="msapplication-TileColor" content="#f5f5f5">
-    <meta name="theme-color" content="#e052a4">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/sitemanifest.json" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#e052a4" />
+    <meta name="msapplication-TileColor" content="#f5f5f5" />
+    <meta name="theme-color" content="#e052a4" />
 
     <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
     <!-- Google Tag Manager -->
@@ -84,7 +84,7 @@
         <li>
           Maximálně&nbsp;<strong>
             <data property="maximumAttendeeCapacity" value="300"
-              >tři stovky</data
+              >tři stovky </data
             >&nbsp;lidí z&nbsp;české tech scény</strong
           >
           s&nbsp;kusem hackera v&nbsp;srdci
@@ -100,7 +100,7 @@
         </li>
       </ul>
     </section>
-    <section>
+    <section id="popis">
       <p property="description">
         Zažijte nultý ročník netradičního třídenního festivalu pro lidi
         z&nbsp;české tech scény. V&nbsp;duchu nekonference či barcampu se od
@@ -133,10 +133,11 @@
       </p>
 
       <p>
-        Můžete přijet jako jednotlivec, nebo vyrazit s&nbsp;celým svým
-        týmem a tři dny v&nbsp;přírodě si užít společně. Máme už první předběžné
-        zájemce o&nbsp;účast. Potkáte se například s&nbsp;klukama a holkama
-        z&nbsp;<span property="organizer" typeof="Organization"
+        Můžete přijet jako jednotlivec, nebo vyrazit s&nbsp;celým svým týmem a
+        tři dny v&nbsp;přírodě si užít společně. Máme už první předběžné zájemce
+        o&nbsp;účast. Potkáte se například s&nbsp;klukama a holkama z&nbsp;<span
+          property="organizer"
+          typeof="Organization"
           ><a property="sameAs" href="https://apify.com/">Apify</a></span
         >,
         <span property="organizer" typeof="Organization"
@@ -168,13 +169,13 @@
       </p>
 
       <!--
-  <div class="hc-cta">
-    <a href="#" class="hc-btn">Přijeďte taky</a>
-  </div>
-  -->
+<div class="hc-cta">
+<a href="#" class="hc-btn">Přijeďte taky</a>
+</div>
+-->
     </section>
 
-    <section>
+    <section id="kdy">
       <h2 id="toc-kdy-prijet">Kdy přijet?</h2>
 
       <p>
@@ -187,7 +188,9 @@
         </strong>
         v&nbsp;poledne, hned jak se proberete po good-bye&nbsp;party.
       </p>
+    </section>
 
+    <section id="kde">
       <h2 id="toc-kde-budeme">Kde budeme?</h2>
 
       <div property="location" typeof="Campground">
@@ -202,7 +205,8 @@
           <span property="addressLocality">Rožmitál pod Třemšínem</span>
         </div>
       </div>
-
+    </section>
+    <section id="kolik">
       <h2 id="toc-co-to-bude-stat">Co to bude stát?</h2>
 
       <p>
@@ -219,7 +223,8 @@
         Jako firma můžete podpořit účast nějaké neziskovky, nebo studenta. Dejte
         nám vědět, zda o&nbsp;něco takového máte zájem. Rádi vás propojíme!
       </p>
-
+    </section>
+    <section id="co-cekat">
       <h2 id="toc-co-od-hacker-campu-cekat">Co od Hacker Campu čekat?</h2>
 
       <p>
@@ -266,7 +271,8 @@
           samotnou&nbsp;akci
         </li>
       </ul>
-
+    </section>
+    <section id="o-nas">
       <h2 id="toc-kdo-jsme">Kdo jsme</h2>
 
       <p>
