[www.hackercamp.cz] Iteration on colors

--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -70,8 +70,10 @@
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
     <header>
-      <h1 property="name">Hacker Camp</h1>
-      <small>Hack to the Future</small>
+      <hgroup>
+        <h1 property="name">Hacker Camp</h1>
+        <h2><small>Hack to the Future</small></h2>
+      </hgroup>
     </header>
     <section>
       <ul>
@@ -199,11 +201,11 @@
             ><span property="name">Sobeňák</span> - krásný areál v srdci Brd</a
           >
         </h3>
-        <div property="address" typeof="PostalAddress">
+        <p property="address" typeof="PostalAddress">
           <span property="streetAddress">Starý Rožmitál 148</span><br />
           <span property="postalCode">262 42</span>
           <span property="addressLocality">Rožmitál pod Třemšínem</span>
-        </div>
+        </p>
       </div>
     </section>
     <section id="kolik">
