[www.hackercamp.cz] Iosevka in tha house

--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <title>Hacker Camp</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preload" href="/assets/css/iosevka-regular.woff2" as="font" crossorigin>
+    <link rel="preload" href="/assets/css/iosevka-bold.woff2" as="font" crossorigin>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width,Save-Data" />
     <meta
@@ -290,7 +292,8 @@
         vznikají ty nejlepší nečekané nápady. Už teď se na nultý ročník Hacker
         Campu i tebe a tvůj tým těšíme!
       </p>
-
+    </section>
+    <section>
       <h2>Chceš přijet?</h2>
       <p>
         Kontaktuj někoho z core týmu. Ideálně rovnou s nápadem, jak bys Hacker
