[www.hackercamp.cz] Removed unused font

--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -17,7 +17,7 @@
       content="Zažijte nultý ročník netradičního třídenního festivalu pro lidi z české tech scény. V duchu nekonference či barcampu se od sebe budeme vzájemně učit, bavit se a poznávat."
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Mukta+Mahee&amp;family=PT+Mono&amp;display=swap"
+      href="https://fonts.googleapis.com/css2?family=PT+Mono&amp;display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/assets/css/main.css" />
