[www.hackercamp.cz] Fixed backgorundclip on headings

--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -125,7 +125,7 @@
       }
       h2 {
         background-image: var(--hc-gradient);
-        background-clip: text;
+        -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         display: inline;
       }
