[www.hlidacshopu.cz] Added fallback color for headings

--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -124,6 +124,7 @@
         text-transform: capitalize;
       }
       h2 {
+        color: #fff;
         background-image: var(--hc-gradient);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
