--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <title>Hacker Camp</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://www.googletagmanager.com" />
+    <link rel="preconnect" href="https://www.google-analytics.com" />
     <link rel="preload" href="/assets/css/iosevka-regular.woff2" as="font" crossorigin>
     <link rel="preload" href="/assets/css/iosevka-bold.woff2" as="font" crossorigin>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
