[www.hackercamp.cz] Added link to form

--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -157,6 +157,15 @@
         content: "👉";
         padding-right: 1ex;
       }
+
+      .hc-cta, .hc-cta:visited {
+        color: #fff;
+        background-image: var(--hc-gradient);
+        font-weight: bold;
+        display: inline-block;
+        text-decoration: none;
+        padding: 0.5em 1em
+      }
     </style>
     <link rel="canonical" href="https://www.hackercamp.cz/" />
 
@@ -240,6 +249,7 @@
           večerní&nbsp;zábava
         </li>
       </ul>
+      <p><a href="https://docs.google.com/forms/d/1MS_4Fe29r4wS8AwOS3Y4Rx6uMxl1c4Clw38un056N30/edit" class="hc-cta">Chci se zúčastnit</a></p>
     </section>
     <section id="popis">
       <p property="description">
@@ -433,8 +443,10 @@
     <section>
       <h2>Chceš přijet?</h2>
       <p>
-        Kontaktuj někoho z core týmu. Ideálně rovnou s nápadem, jak bys Hacker
-        Camp obohatil(a). Těšíme se!
+        <a
+          href="https://docs.google.com/forms/d/1MS_4Fe29r4wS8AwOS3Y4Rx6uMxl1c4Clw38un056N30/edit"
+          >Vyplň nám dotazníček</a
+        >, ideálně rovnou s nápadem, jak bys Hacker Camp obohatil(a). Těšíme se!
       </p>
     </section>
 
